# opencv-tutorial

./: LICENSE
opencv-cpp/: CMakeLists.txt  case_filter_background.cpp  ex10_alpha_merge.cpp  ex11_flip_image.cpp  ex12_draw_image.cpp  ex13_chapter3_exercise.cpp  ex14_image_read.cpp  ex15_mouse_draw_rect.cpp  ex16_camera_record.cpp  ex1_show_image.cpp  ex2_play_video.cpp  ex3_play_control.cpp  ex4_image_gaussian.cpp  ex4_play_video_gaussian.cpp  ex5_image_shrink.cpp  ex6_write_gray_video.cpp  ex7_matrix_operations.cpp  ex8_saturate_sv.cpp  ex9_image_roi.cpp  examples.h  main.cpp
opencv-python/: ex1_show_image.py  ex2_play_video.py  ex3_play_control.py  ex3_play_control_ex.py  ex4_image_gaussian.py  ex4_play_video_gaussian.py  ex5_image_resize.py  ex5_image_updown.py  ex6_image_canny.py  ex7_read_camera.py
